# libseven

./: CMakeLists.txt  README.md  meson.build
doc/: stability.md
include/seven/: base.h  dma.h  input.h  irq.h  memory.h  prelude.h
src/: dma.s  input.c  irq.c  irq_entry.s
src/hw/: dma.s  isr.s
